--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Chaylon's Portfolio</title>
 </head>
 <body>
-    
+    <h1>Welcome</h1>
+    <p>Hi I'm Chaylon, and this is my Web Developer portfolio.</p>
+    <p>This page is a work in progress</p>
 </body>
 </html>
