--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaylon Fraser | Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
     <script defer src="https://cloud.umami.is/script.js" data-website-id="18f50d4f-3d7b-40b5-949b-30977e7a873e"></script>
 </head>
 <body>
@@ -18,14 +17,13 @@
         </nav>
     </header>
     <main>
-        <section class="intro">
-            <div class="text">
-                <h2>Hi, my name is <span id="chaylon">Chaylon</span>.</h2>
-                <p>I'm a developer in training.</p>
-            </div>
-            <div class="image">
-                <img id="portrait-image" src="images/chaylon.png">
-            </div>
+        <section class="contact">
+            <p>You'll find me at the following places
+                 <br />Take a look at my work or send me a hello  
+                <br /> <br />
+                <a href="https://github.com/ChaylonF">Github</a> | <a href="https://www.linkedin.com/in/chaylonf/">LinkedIn</a>
+            </p>
+            
         </section>
     </main>
 </body>
