--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <p>You'll find me at the following places
                  <br />Take a look at my work or send me a hello  
                 <br /> <br />
-                <a href="https://github.com/ChaylonF">Github</a> | <a href="https://www.linkedin.com/in/chaylonf/">LinkedIn</a>
+                <a href="https://github.com/ChaylonF" target="_blank">Github</a> | <a href="https://www.linkedin.com/in/chaylonf/" target="_blank">LinkedIn</a>
             </p>
             
         </section>
